refactor(preview): 优化几何表面元素的颜色初始化和顶点访问
- 移除lineColor的默认值初始化
- 使用getFirst()方法替代get(0)获取顶点数据
- 提升代码可读性和性能表现